added blue order button on product detail advanced view

--- a/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
+++ b/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
@@ -76,6 +76,10 @@
 .refund-order-button{
   background: #FFD21F!important;
 }
+.order-detail-button{
+  background: #4277C2!important;
+  color: #FFF!important;
+}
 
 .general {
   padding: 20px;
