--- a/src/app/pages/customer-advanced-page/order-item/order-item.component.scss
+++ b/src/app/pages/customer-advanced-page/order-item/order-item.component.scss
@@ -13,6 +13,15 @@
   font-weight: 500;
 }
 
+.refund-order-button{
+  background: #FFD21F!important;
+}
+
+.order-detail-button{
+  background: #4277C2!important;
+  color: #FFF!important;
+}
+
 .header {
   padding: 20px;
 
