--- a/src/app/pages/customer-advanced-page/customer-info-notes/customer-info-notes.component.html
+++ b/src/app/pages/customer-advanced-page/customer-info-notes/customer-info-notes.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="new-note-container">
-    <textarea class="new-note" rows="6" placeholder="Add note..." [(ngModel)]="newNoteText"></textarea>
+    <textarea class="new-note" rows="6" maxlength="2500" placeholder="Add note..." [(ngModel)]="newNoteText"></textarea>
     <div class="button-holder">
       <button mat-button (click)="saveNote()">SAVE</button>
     </div>
