--- a/src/app/shared/components/image-uploader/image-uploader.component.scss
+++ b/src/app/shared/components/image-uploader/image-uploader.component.scss
@@ -55,6 +55,8 @@
 
   .image {
     border: 1px solid rgba(0,0,0,0.2);
+    max-width: 100%;
+    max-height: 75vh;
 
     &--file-over {
       border-color: red;
