Initial work on cycles editor

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -62,6 +62,10 @@
 
       </mat-tab>
 
+      <mat-tab>
+        <cycles-editor [productSchedule]="productScheduleCycles"></cycles-editor>
+      </mat-tab>
+
     </mat-tab-group>
   </div>
 
