--- a/src/app/shared/components/cycles-editor/editor/editor.component.scss
+++ b/src/app/shared/components/cycles-editor/editor/editor.component.scss
@@ -1,4 +1,5 @@
 .content {
+  display: block !important;
   min-width: 100%;
   height: calc(100% - 44px);
   width: 1px;
@@ -44,64 +45,82 @@
 
   .editor-cycles {
     display: flex;
+  }
+}
 
-    .cycle {
-      transition: width 80ms, opacity 80ms;
+.cycle {
+  transition: width 80ms, opacity 80ms;
+  font-family: "Roboto", serif;
 
-      .position {
-        position: relative;
-        display: flex;
-        height: 90px;
-        background: #2962B3;
-        text-align: center;
-        color: #ffffff;
-        font-size: 14px;
-        cursor: pointer;
-        border: 1px solid rgba(0, 0, 0, 0.12);
+  .position {
+    position: relative;
+    display: flex;
+    height: 90px;
+    background: #2962B3;
+    text-align: center;
+    color: #ffffff;
+    font-size: 14px;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.12);
 
-        .data {
-          margin: auto;
-          font-weight: 500;
+    .data {
+      margin: auto;
+      font-weight: 500;
 
-          div {
-            line-height: 22px;
-            vertical-align: middle;
-          }
-        }
-
-        .inf {
-          position: absolute;
-          right: 16px;
-          top: 50%;
-          transform: translateY(-50%);
-
-          mat-icon {
-            height: 32px;
-            width: 32px;
-            font-size: 32px;
-          }
-        }
-
-        .resizer {
-          width: 16px;
-          cursor: col-resize;
-        }
+      div {
+        line-height: 22px;
+        vertical-align: middle;
       }
-
-      .block {
-        margin: 3px 0;
-        height: 48px;
-        background: #99CCFF;
-        border-radius: 5px;
-        border: 1px solid rgba(41, 108, 204, 0.5);
-      }
-
-      &--selected {
-        opacity: 0.5;
-        transition: opacity 150ms;
-      }
-
     }
 
+    .inf {
+      position: absolute;
+      right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+
+      mat-icon {
+        height: 32px;
+        width: 32px;
+        font-size: 32px;
+      }
+    }
+
+    .resizer {
+      width: 16px;
+      opacity: 0;
+      cursor: col-resize;
+    }
   }
+
+  .block {
+    margin: 3px 0;
+    height: 48px;
+    background: #99CCFF;
+    border-radius: 5px;
+    border: 1px solid rgba(41, 108, 204, 0.5);
+  }
+
+  &--selected {
+    opacity: 0.5;
+    transition: opacity 150ms;
+  }
+
+}
+
+
+.drag-container {
+  display: flex;
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-container.cdk-drop-list-dragging .cycle:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
