--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
@@ -23,7 +23,7 @@
     <custom-mat-dropdown
             class="cycle-dropdown"
             (selectItem)="nextChanged($event)"
-            [editable]="selectedCycle.position === numberOfCycles"
+            [editable]="selectedCycle.position === (cycleOptions.length - 1)"
             [items]="cycleOptions"
             [selectedItem]="selectedCycle.nextPosition"
             [placeholder]="'Next Cycle'"
@@ -65,6 +65,6 @@
 
   </div>
 
-  <button mat-button class="delete-button">DELETE CYCLE</button>
+  <button *ngIf="cycleOptions.length > 2" mat-button class="delete-button" (click)="deleteCycle($event)">DELETE CYCLE</button>
 
 </div>
