--- a/src/app/shared/components/cycles-editor/left-rail/left-rail.component.scss
+++ b/src/app/shared/components/cycles-editor/left-rail/left-rail.component.scss
@@ -14,15 +14,15 @@
   }
 
   button {
-    margin: 22px auto;
-    padding: 6px 36px;
+    margin: 6px auto;
+    padding: 0 36px;
     font-size: 13px;
     color: #ffffff;
     background: #296CCC;
   }
 
   .product {
-    padding: 18px 0;
+    padding: 24px 0;
     font-size: 15px;
   }
 }
