Update cycle editor styles and actions

--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <mat-form-field>
-      <input type="text" matInput placeholder="Cycle Length" [(ngModel)]="selectedCycle.length" [disabled]="selectedCycle.monthly">
+      <input type="number" matInput placeholder="Cycle Length" [(ngModel)]="selectedCycle.length" [disabled]="selectedCycle.monthly">
     </mat-form-field>
 
     <custom-mat-dropdown
