--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.scss
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.scss
@@ -69,17 +69,14 @@
     margin-left: auto;
     margin-right: 10px;
   }
+}
 
-  .delete-button {
-    position: relative;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 0 36px;
-    background: #DC2547;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    border-radius: 4px;
-    color: #ffffff;
-  }
+.delete-button {
+  margin: auto auto 2px;
+  padding: 0 36px;
+  background: #DC2547;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: #ffffff;
 }
