--- a/src/app/shared/components/cycles-editor/toolbar/toolbar.component.scss
+++ b/src/app/shared/components/cycles-editor/toolbar/toolbar.component.scss
@@ -36,6 +36,13 @@
     margin-left: 8px;
   }
 
+  .save-button {
+    margin-left: 30px;
+    padding: 0 36px;
+    background: #2962B3;
+    color: #ffffff;
+  }
+
   input[type=range] {
     -webkit-appearance: none;
     padding: 15px 0;
