--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -677,6 +677,131 @@ $info-width: 290px;
   }
 }
 
+.description-container {
+  margin: 20px;
+  padding: 25px 25px 15px;
+  background: #ffffff;
+  border: 2px solid rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+
+  .title {
+    display: flex;
+    margin-bottom: 24px;
+    line-height: 24px;
+    font-size: 20px;
+    font-weight: 500;
+
+    mat-icon {
+      margin-left: auto;
+      border: 1px solid rgba(0, 0, 0, 0.12);
+      border-radius: 2px;
+      color: #5F6368;
+      font-size: 18px;
+      height: 18px;
+      width: 18px;
+      cursor: pointer;
+    }
+  }
+
+  textarea {
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    padding: 6px;
+    background: #FFFCEA;
+    resize: none;
+  }
+
+}
+
+.details-box {
+  padding: 20px;
+  font-size: 14px;
+
+  &--blue {
+    background: rgba(44, 152, 240, 0.1);
+  }
+
+  .box-title {
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  mat-form-field {
+    margin-bottom: 6px;
+    width: 100%;
+  }
+
+  .row {
+    display: flex;
+    align-items: center;
+
+    mat-form-field {
+      width: 90px;
+
+      &:first-of-type {
+        margin-right: 30px;
+      }
+    }
+  }
+
+  mat-checkbox {
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 16px;
+  }
+}
+
+.edit-buttons {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+
+  button:first-of-type {
+    margin-left: auto;
+    margin-right: 10px;
+  }
+
+  button:last-of-type {
+    color: #2C98F0;
+  }
+}
+
+.edit-row {
+  display: flex;
+  align-items: center;
+  height: 20px;
+
+  &--first {
+    margin-top: 20px;
+
+    mat-icon {
+      margin-bottom: 12px;
+    }
+  }
+
+  &--second {
+    margin-bottom: 15px;
+  }
+
+  mat-form-field {
+    width: 180px;
+  }
+
+  mat-icon {
+    margin-left: auto;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+    color: #5F6368;
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+  }
+}
+
 .details-box--disabled {
   .mat-form-field-underline {
     display: none;
