Add mid groups to producct schedules, additional styling

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -39,10 +39,13 @@
                   </div>
 
                   <custom-mat-dropdown
+                          (selectItem)="productScheduleCycles.merchantProviderGroup = $event"
                           [editable]="editMain"
                           [placeholder]="'Merchant Processing'"
-                          [items]="[]"
-                          [selectedItem]="'-'">
+                          [items]="merchantProviderGroups"
+                          [mapper]="merchantProviderGroupMapper"
+                          [showAddNew]="false"
+                          [selectedItem]="productScheduleCycles.merchantProviderGroup">
                   </custom-mat-dropdown>
 
                   <div class="edit-buttons" *ngIf="editMain">
