--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
@@ -25,11 +25,8 @@ custom-mat-dropdown {
 }
 
 .delete-button {
-  position: relative;
-  margin-top: 15px;
+  margin: auto auto 2px;
   background: #DC2547;
-  left: 50%;
-  transform: translateX(-50%);
   font-weight: 500;
   color: #ffffff;
   width: 165px;
