--- a/src/app/shared/components/cycles-editor/cycles-editor.component.html
+++ b/src/app/shared/components/cycles-editor/cycles-editor.component.html
@@ -3,7 +3,12 @@
     <div class="content">
       <div class="section section--main" [class.section--full]="!selectedCycle">
 
-        <left-rail [title]="getTitle()" [products]="products" (addNewCycle)="addNewCycle()"></left-rail>
+        <left-rail
+             [title]="getTitle()"
+             [products]="products"
+             [selectedCycle]="selectedCycle"
+             (addNewCycle)="addNewCycle()">
+        </left-rail>
 
         <div class="editor-container">
           <editor
