--- a/src/app/shared/components/cycles-editor/left-rail/left-rail.component.scss
+++ b/src/app/shared/components/cycles-editor/left-rail/left-rail.component.scss
@@ -16,8 +16,8 @@
   }
 
   button {
+    width: 140px;
     margin: 6px auto;
-    padding: 0 36px;
     font-size: 13px;
     color: #ffffff;
     background: $action-color;
