Update cycles editor toolbar and palette

--- a/src/app/shared/components/cycles-editor/cycles-editor.component.html
+++ b/src/app/shared/components/cycles-editor/cycles-editor.component.html
@@ -23,8 +23,7 @@
               (zoomLevelChanged)="zoomLevel = $event"
               (save)="save()"
               (undo)="undo()"
-              (redo)="redo()"
-              (revert)="revert()">
+              (redo)="redo()">
           </toolbar>
         </div>
 
