--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -129,7 +129,7 @@ $main-color: #9B9A9B;
       display: flex;
       align-items: center;
       padding: 2px 10px;
-      background: $main-color-600;
+      background: #ffffff;
       height: 40px;
       width: 100%;
       max-width: 425px;
@@ -153,19 +153,10 @@ $main-color: #9B9A9B;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         overflow: auto;
       }
-
-      .search-input--focused {
-        caret-color: white;
-      }
     }
 
     &__input {
       width: 200px;
-      color: white;
-    }
-
-    &__icon {
-      color: white;
     }
   }
 
