--- a/src/assets/scss/_notifications.scss
+++ b/src/assets/scss/_notifications.scss
@@ -1,8 +1,8 @@
 @import "colors";
 
 .notifications-list {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 70px;
   right: 0;
   width: 350px;
   height: calc(100vh - 71px);
