--- a/src/app/shared/components/cycles-editor/cycles-editor.component.html
+++ b/src/app/shared/components/cycles-editor/cycles-editor.component.html
@@ -5,7 +5,7 @@
 
         <left-rail
              [title]="getTitle()"
-             [products]="products"
+             [cycleProducts]="cycleProducts"
              [selectedCycle]="selectedCycle"
              (addNewCycle)="addNewCycle()">
         </left-rail>
