--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
@@ -37,16 +37,16 @@
     <div class="product-data">
       <div class="name">{{product.name}}</div>
       <div class="sku">SKU <span *ngIf="product.sku; else schedulessku">{{product.sku}}</span></div>
-      <ng-template #schedulessku><span class="sku-list" *ngFor="let schedule of product.initialCycleSchedules">{{schedule.product.sku || '–'}}</span></ng-template>
-      <div class="price">Price {{product.defaultPrice ? product.defaultPrice.usd() : product.initialCycleSchedulesPrice.usd()}} <div class="subscription" *ngIf="product.schedules">SUBSCRIPTION{{confirmationRequired() ? ', CONFIRMATION REQUIRED':''}}</div></div>
+      <ng-template #schedulessku><span class="sku-list" *ngFor="let cycleProduct of product.cycle[0].cycleProducts">{{cycleProduct.product.sku || '–'}}</span></ng-template>
+      <div class="price">Price {{product.defaultPrice ? product.defaultPrice.usd() : product.getInitialPrice().usd()}} <div class="subscription" *ngIf="product.schedules">SUBSCRIPTION{{confirmationRequired() ? ', CONFIRMATION REQUIRED':''}}</div></div>
 
       <div class="description">
         <ng-container *ngIf="product.description; else schedulesdescription">
           {{product.description || '–' }}
         </ng-container>
         <ng-template #schedulesdescription>
-          <div *ngFor="let schedule of product.initialCycleSchedules">
-            {{schedule.product.description || '–' }}
+          <div *ngFor="let cycleProduct of product.cycle[0].cycleProducts">
+            {{cycleProduct.product.description || '–' }}
           </div>
         </ng-template>
       </div>
