Update cycle details edit right rail

--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
@@ -2,8 +2,6 @@
 
   <div class="row title">
     <div>Cycle {{selectedCycle.position}}</div>
-
-    <mat-icon class="edit-icon">edit</mat-icon>
   </div>
 
 
@@ -43,7 +41,7 @@
 
   </div>
 
-  <div class="products-title">Products in Cycle {{selectedCycle.position}}</div>
+  <div class="products-title">Products</div>
 
   <div>
 
