--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
@@ -58,3 +58,18 @@ custom-mat-dropdown {
     }
   }
 }
+
+.mid-group {
+  margin-top: 38px;
+  margin-bottom: 10px;
+}
+
+.dropdown-icon {
+  border: none;
+  margin-left: auto;
+  color: #5F6368;
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
